--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,400i,500,600,700,800,900&display=swap" rel="stylesheet">
 
 
-     </head>
+                                    </head>
     <body class="bg-yellow-100">
             <header>
     <nav class="bg-white p-2 hide-xs">
@@ -250,7 +250,7 @@
                                 preload="auto"
                                 poster="/videos/poster_1.png"
                                 data-setup='{}'
-                                style="box-shadow: 2px 2px 50px"
+                                style="box-shadow: 2px 2px 50px #ccc"
                         >
                             <source src="/videos/video_13.mp4" type="video/mp4"></source>
                             <p class="vjs-no-js">
@@ -591,43 +591,7 @@
             <div class="col-xs-24  col-lg-8">
                 <h5 class="mb-4 mt-6">From our News Desk</h5>
                 <div id="news" class="threadContainer">
-                    <div class="excerpt">
-                        <span class="d-block mb-2"> 20 August 2019</span>
-                        <a href="#"><h5 class="text-color-yellow">Rensource raises $3.5m to take affordable renewable energy ...</h5></a>
-                        <p class="">
-                            At Rensource, we believe our performance is best judged by our stakeholders.
-                        </p>
-                    </div><div class="excerpt">
-                    <span class="d-block mb-2"> 20 August 2019</span>
-                    <a href="#"><h5 class="text-color-yellow">Rensource raises $3.5m to take affordable renewable energy ...</h5></a>
-                    <p class="">
-                        At Rensource, we believe our performance is best judged by our stakeholders.
-                    </p>
-                </div><div class="excerpt">
-                    <span class="d-block mb-2"> 20 August 2019</span>
-                    <a href="#"><h5 class="text-color-yellow">Rensource raises $3.5m to take affordable renewable energy ...</h5></a>
-                    <p class="">
-                        At Rensource, we believe our performance is best judged by our stakeholders.
-                    </p>
-                </div><div class="excerpt">
-                    <span class="d-block mb-2"> 20 August 2019</span>
-                    <a href="#"><h5 class="text-color-yellow">Rensource raises $3.5m to take affordable renewable energy ...</h5></a>
-                    <p class="">
-                        At Rensource, we believe our performance is best judged by our stakeholders.
-                    </p>
-                </div><div class="excerpt">
-                    <span class="d-block mb-2"> 20 August 2019</span>
-                    <a href="#"><h5 class="text-color-yellow">Rensource raises $3.5m to take affordable renewable energy ...</h5></a>
-                    <p class="">
-                        At Rensource, we believe our performance is best judged by our stakeholders.
-                    </p>
-                </div><div class="excerpt">
-                    <span class="d-block mb-2"> 20 August 2019</span>
-                    <a href="#"><h5 class="text-color-yellow">Rensource raises $3.5m to take affordable renewable energy ...</h5></a>
-                    <p class="">
-                        At Rensource, we believe our performance is best judged by our stakeholders.
-                    </p>
-                </div>
+                    <div id="rssfeeds"></div>
                 </div>
             </div>
             <div class="col-xs-24  col-lg-8">
@@ -680,43 +644,7 @@
             <div class="col-xs-24  col-lg-8">
                 <h5 class="mb-4 mt-6">Press Releases and News Articles</h5>
                 <div id="press" class="threadContainer">
-                    <div class="excerpt">
-                        <span class="d-block mb-2"> 20 August 2019</span>
-                        <a href="#"><h5 class="text-color-yellow">Rensource raises $3.5m to take affordable renewable energy ...</h5></a>
-                        <p class="">
-                            At Rensource, we believe our performance is best judged by our stakeholders.
-                        </p>
-                    </div><div class="excerpt">
-                        <span class="d-block mb-2"> 20 August 2019</span>
-                        <a href="#"><h5 class="text-color-yellow">Rensource raises $3.5m to take affordable renewable energy ...</h5></a>
-                        <p class="">
-                            At Rensource, we believe our performance is best judged by our stakeholders.
-                        </p>
-                    </div><div class="excerpt">
-                        <span class="d-block mb-2"> 20 August 2019</span>
-                        <a href="#"><h5 class="text-color-yellow">Rensource raises $3.5m to take affordable renewable energy ...</h5></a>
-                        <p class="">
-                            At Rensource, we believe our performance is best judged by our stakeholders.
-                        </p>
-                    </div><div class="excerpt">
-                        <span class="d-block mb-2"> 20 August 2019</span>
-                        <a href="#"><h5 class="text-color-yellow">Rensource raises $3.5m to take affordable renewable energy ...</h5></a>
-                        <p class="">
-                            At Rensource, we believe our performance is best judged by our stakeholders.
-                        </p>
-                    </div><div class="excerpt">
-                        <span class="d-block mb-2"> 20 August 2019</span>
-                        <a href="#"><h5 class="text-color-yellow">Rensource raises $3.5m to take affordable renewable energy ...</h5></a>
-                        <p class="">
-                            At Rensource, we believe our performance is best judged by our stakeholders.
-                        </p>
-                    </div><div class="excerpt">
-                        <span class="d-block mb-2"> 20 August 2019</span>
-                        <a href="#"><h5 class="text-color-yellow">Rensource raises $3.5m to take affordable renewable energy ...</h5></a>
-                        <p class="">
-                            At Rensource, we believe our performance is best judged by our stakeholders.
-                        </p>
-                    </div>
+                    <div id="listing"></div>
                 </div>
             </div>
         </div>
