--- a/single/index.html
+++ b/single/index.html
@@ -98,48 +98,7 @@
             <h1>Press Release and News articles</h1>
             <p>News updates, newly published reports and articles from Rensource</p>
         </div>
-        <div class="row justify-content-center">
-            <article class="col-lg-16 col-xs-24 bg-white p-6">
-                <h4 class="">Renewable energy is the only way to fuel African growth</h4>
-                <span class="text-color-yellow d-block mt-4 mb-4"> 20 August 2019</span>
-                <p>
-                    <a href="https://facebook.com/#" target="_blank" class="p-1">
-                        <span class="social facebook duo">Facebook</span>
-                    </a>
-                    <a href="https://twitter.com/#" target="_blank" class="p-1">
-                        <span class="social twitter duo">Twitter</span>
-                    </a>
-                    <a href="https://www.instagram.com/#" target="_blank" class="p-1">
-                        <span class="social instagram duo">Instagram</span>
-                    </a>
-                    <a href="https://www.instagram.com/#" target="_blank" class="p-1">
-                        <span class="social linkedin duo">LinkedIn</span>
-                    </a>
-                </p>
-                <img src="/images/bustle.jpg" class="img-fluid mb-3">
-                <p>
-                    Public-private partnerships are proving to be an effective way of solving Nigeria's energy supply crisis
-                    My country, Nigeria, will soon become the third most populous country in the world, reaching a forecast 400 million people in 2050. This demographic growth is happening at an incredible speed.
-                </p>
-                <p>
-                    Elderly residents of Lagos will tell you their memories of their home town in the days when the number of inhabitants did not even reach one million. Today, it is a 20-million metropolis that never ever rests.
-                </p>
-                The fast pace of population growth is posing enormous challenges. This relatively young country urgently has to stimulate domestic industries that employ people and thus contribute to inclusive economic growth. However, if it is to grow, Nigeria needs energy.
-                <p>
-                    Only one in four Nigerians is connected to the national power grid and they experience daily power cuts
-                    At times, Nigeria’s generating companies can only provide around 3,000MWh of electricity. By comparison, South Africa, home to approximately a third as many people, produces 50,000MWh.
-                </p>
-                Only one in four Nigerians is connected to the national power grid. And even those who are connected experience daily power cuts.
-                <p>
-                    As a result, Nigeria is the world’s largest importer of power generators fuelled by expensive and polluting diesel. The sheer number of them already threatens the health of millions of Nigerians, the world’s climate and its global commons. And so long as the current energy supply crisis persists, the country’s economy will not be able to keep step with its rapid demographic growth.
-                </p>
-                <p>
-                    What is the solution? Renewable energy sources are environmentally sustainable, financially affordable – and, after all, Nigeria is richly endowed with water and sun.
-
-                </p>
-
-            </article>
-        </div>
+        <div class="row justify-content-center" id="article"></div>
     </div>
 </section>            <footer style="color:#B0B0B0;background-color: #282828; position: relative" class="pt-6 t-14 leading-5">
     <div class="container">
