--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                 <a class="dropdown-item" href="/leadership/index.html">Leadership</a>
                             </div>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item dropdown">
                             <a class="nav-link" href="/news/index.html">News</a>
                         </li>
                         <li class="nav-item">
