--- a/media/index.html
+++ b/media/index.html
@@ -104,8 +104,8 @@
         <div class="text-center mb-4">
             <h1>Media</h1>
         </div>
-        <div id="videos" class="mb-4" data-src='[{ "id": "ra", "poster": "/videos/poster image for what we do.png", "src": "/videos/Rensource What we do.mp4" },
-        { "id": "ra", "poster": "/videos/poster image for what we do.png", "src": "/videos/Rensource What we do.mp4" },{ "id": "ra", "poster": "/videos/poster image for what we do.png", "src": "/videos/Rensource What we do.mp4" },{ "id": "ra", "poster": "/videos/poster image for what we do.png", "src": "/videos/Rensource What we do.mp4" }]' 
+        <div id="videos" class="mb-4" data-src='[{ "id": "ra", "poster": "/videos/poster image for what we do.png", "src": "https://s3.eu-central-1.amazonaws.com/rensource.energy/Rensource.Website.Video" },
+        { "id": "ra", "poster": "/videos/poster image for what we do.png", "src": "https://s3.eu-central-1.amazonaws.com/rensource.energy/Rensource.Website.Video" },{ "id": "ra", "poster": "/videos/poster image for what we do.png", "src": "/videos/Rensource What we do.mp4" },{ "id": "ra", "poster": "/videos/poster image for what we do.png", "src": "/videos/Rensource What we do.mp4" }]' 
         data-row-height="700" data-col-size="col-lg-12 col-sm-24 col-xs-24"></div>
         <div id="media" class="container pt-8 pb-8"></div>
         
